--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -111,8 +111,8 @@ dependencies {
   api 'org.apache.rat:apache-rat:0.13'
   api 'commons-io:commons-io:2.7'
   api "net.java.dev.jna:jna:5.5.0"
-  api 'com.github.jengelman.gradle.plugins:shadow:6.0.0'
   api 'de.thetaphi:forbiddenapis:3.2'
+  api 'gradle.plugin.com.github.johnrengelman:shadow:7.1.2'
   api 'com.avast.gradle:gradle-docker-compose-plugin:0.14.12'
   api "org.yaml:snakeyaml:${props.getProperty('snakeyaml')}"
   api 'org.apache.maven:maven-model:3.6.2'
