--- a/distribution/packages/build.gradle
+++ b/distribution/packages/build.gradle
@@ -63,7 +63,7 @@ import java.util.regex.Pattern
  */
 
 plugins {
-  id "nebula.ospackage-base" version "9.1.1"
+  id "com.netflix.nebula.ospackage-base" version "11.0.0"
 }
 
 void addProcessFilesTask(String type, boolean jdk) {
@@ -290,7 +290,7 @@ Closure commonPackageConfig(String type, boolean jdk, String architecture) {
   }
 }
 
-apply plugin: 'nebula.ospackage-base'
+apply plugin: 'com.netflix.nebula.ospackage-base'
 
 // this is package indepdendent configuration
 ospackage {
