--- a/test/fixtures/hdfs-fixture/build.gradle
+++ b/test/fixtures/hdfs-fixture/build.gradle
@@ -36,6 +36,9 @@ dependencies {
   api("org.apache.hadoop:hadoop-minicluster:3.3.4") {
     exclude module: 'websocket-client'
     exclude module: 'jettison'
+    exclude module: 'netty'
+    exclude module: 'guava'
+    exclude group: 'org.codehaus.jackson'
   }
   api "org.codehaus.jettison:jettison:${versions.jettison}"
   api "org.apache.commons:commons-compress:1.22"
@@ -53,4 +56,7 @@ dependencies {
   api "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
   api 'org.eclipse.jetty:jetty-server:9.4.49.v20220914'
   api 'org.apache.zookeeper:zookeeper:3.8.0'
+  api "org.apache.commons:commons-text:1.10.0"
+  api "commons-net:commons-net:3.9.0"
+  runtimeOnly "com.google.guava:guava:${versions.guava}"
 }
