Fix precommit failures
Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/libs/common/build.gradle
+++ b/libs/common/build.gradle
@@ -19,6 +19,10 @@ dependencies {
   // This dependency is used only by :libs:core for null-checking interop with other tools
   compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 
+  /*******
+   *  !!!! NO THIRD PARTY DEPENDENCIES !!!!
+   *******/
+
   testImplementation "com.carrotsearch.randomizedtesting:randomizedtesting-runner:${versions.randomizedrunner}"
   testImplementation "junit:junit:${versions.junit}"
   testImplementation "org.hamcrest:hamcrest:${versions.hamcrest}"
