Use wrapper getDistributionUrl method
Signed-off-by: Daniel Widdis <widdis@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -545,12 +545,12 @@ allprojects {
 wrapper {
   distributionType = 'ALL'
   doLast {
-    def sha256Sum = new String(new URL("${distributionUrl}.sha256").bytes)
+    def sha256Sum = new String(new URL(getDistributionUrl() + ".sha256").bytes)
     propertiesFile << "distributionSha256Sum=${sha256Sum}\n"
     println "Added checksum to wrapper properties"
     // Update build-tools to reflect the Gradle upgrade
     // TODO: we can remove this once we have tests to make sure older versions work.
-    project(':build-tools').file('src/main/resources/minimumGradleVersion').text = gradleVersion + System.getProperty("line.separator")
+    project(':build-tools').file('src/main/resources/minimumGradleVersion').text = gradleVersion + "\n"
     println "Updated minimum Gradle Version"
   }
 }
