Update Gradle to 8.0 (#5666)
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>
(cherry picked from commit 7914c0499048793b55aa7d4d2c1156293e7998be)
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

--- a/plugins/examples/build.gradle
+++ b/plugins/examples/build.gradle
@@ -31,8 +31,8 @@ gradle.projectsEvaluated {
 configure(project('painless-whitelist')) {
   configurations.all {
     resolutionStrategy.dependencySubstitution {
-      substitute module('org.opensearch.plugin:opensearch-scripting-painless-spi') with project(':modules:lang-painless:spi')
-      substitute module('org.opensearch.test:logger-usage') with project(':test:logger-usage')
+      substitute module('org.opensearch.plugin:opensearch-scripting-painless-spi') using project(':modules:lang-painless:spi')
+      substitute module('org.opensearch.test:logger-usage') using project(':test:logger-usage')
     }
   }
 }
