Remove deprecated org.gradle.util.DistributionLocator usage (#6212)
* Remove deprecated org.gradle.util.DistributionLocator usage

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Update gradle wrapper version to test no deprecation warning

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Change log

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Add newline so linelint doesn't complain.

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Remove remove typo typo

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Use wrapper getDistributionUrl method

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Restore license header removed by autogeneration

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Gradle 8

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Revert minimumGradleVersion change

Signed-off-by: Daniel Widdis <widdis@gmail.com>

---------

Signed-off-by: Daniel Widdis <widdis@gmail.com>
(cherry picked from commit 36f5cfe807584177dd4842810734e04a5f7bd4ae)

--- a/build.gradle
+++ b/build.gradle
@@ -47,8 +47,6 @@ import org.gradle.plugins.ide.eclipse.model.SourceFolder
 import org.gradle.api.Project;
 import org.gradle.api.internal.tasks.testing.junit.JUnitTestFramework
 import org.gradle.process.ExecResult;
-import org.gradle.util.DistributionLocator
-import org.gradle.util.GradleVersion
 
 import static org.opensearch.gradle.util.GradleUtils.maybeConfigure
 
@@ -546,16 +544,12 @@ allprojects {
 wrapper {
   distributionType = 'ALL'
   doLast {
-    final DistributionLocator locator = new DistributionLocator()
-    final GradleVersion version = GradleVersion.version(wrapper.gradleVersion)
-    final URI distributionUri = locator.getDistributionFor(version, wrapper.distributionType.name().toLowerCase(Locale.ENGLISH))
-    final URI sha256Uri = new URI(distributionUri.toString() + ".sha256")
-    final String sha256Sum = new String(sha256Uri.toURL().bytes)
-    wrapper.getPropertiesFile() << "distributionSha256Sum=${sha256Sum}\n"
+    def sha256Sum = new String(new URL(getDistributionUrl() + ".sha256").bytes)
+    propertiesFile << "distributionSha256Sum=${sha256Sum}\n"
     println "Added checksum to wrapper properties"
     // Update build-tools to reflect the Gradle upgrade
     // TODO: we can remove this once we have tests to make sure older versions work.
-    project(':build-tools').file('src/main/resources/minimumGradleVersion').text = gradleVersion
+    project(':build-tools').file('src/main/resources/minimumGradleVersion').text = gradleVersion + "\n"
     println "Updated minimum Gradle Version"
   }
 }
