--- a/qa/wildfly/build.gradle
+++ b/qa/wildfly/build.gradle
@@ -42,6 +42,10 @@ dependencies {
   providedCompile 'javax.enterprise:cdi-api:2.0'
   providedCompile 'org.jboss.spec.javax.annotation:jboss-annotations-api_1.2_spec:1.0.2.Final'
   providedCompile 'org.jboss.spec.javax.ws.rs:jboss-jaxrs-api_2.0_spec:1.0.1.Final'
+  providedCompile('com.fasterxml.jackson.jakarta.rs:jackson-jakarta-rs-json-provider:2.14.2') {
+    exclude module: 'jakarta.activation'
+  }
+  providedCompile 'org.jboss.resteasy:resteasy-core:6.2.2.Final'
   api('org.jboss.resteasy:resteasy-jackson2-provider:6.2.2.Final') {
     exclude module: 'jackson-annotations'
     exclude module: 'jackson-core'
