--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -40,16 +40,23 @@ archivesBaseName = 'opensearch-benchmarks'
 test.enabled = false
 
 dependencies {
+//  implementation project(":dependencies:client:opensearch:opensearch-rest-high-level-client")
   api( project(":server")) {
     // JMH ships with the conflicting version 4.6. This prevents us from using jopt-simple in benchmarks (which should be ok) but allows
     // us to invoke the JMH uberjar as usual.
     exclude group: 'net.sf.jopt-simple', module: 'jopt-simple'
   }
+  api(project(":client:rest-high-level"))
+  api "org.apache.httpcomponents:httpcore:${versions.httpcore}"
+  api "org.apache.httpcomponents:httpclient:${versions.httpclient}"
   api "org.openjdk.jmh:jmh-core:$versions.jmh"
+  implementation 'org.json:json:20210307'
+//  implementation 'org.apache.httpcomponents:httpcore5:5.1.3'
   annotationProcessor "org.openjdk.jmh:jmh-generator-annprocess:$versions.jmh"
   // Dependencies of JMH
   runtimeOnly 'net.sf.jopt-simple:jopt-simple:5.0.4'
   runtimeOnly 'org.apache.commons:commons-math3:3.6.1'
+
 }
 
 // enable the JMH's BenchmarkProcessor to generate the final benchmark classes
