--- a/rest-api-spec/src/main/resources/rest-api-spec/test/indices.open/30_wait_for_completion.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/indices.open/30_wait_for_completion.yml
@@ -25,12 +25,26 @@
       indices.open:
         index: test_index
         wait_for_active_shards: all
+        cluster_manager_timeout: 10s
         wait_for_completion: false
+        task_execution_timeout: 30s
   - match: { task: /^.+$/ }
   - set: { task: taskId }
 
   - do:
       tasks.get:
+        wait_for_completion: true
         task_id: $taskId
   - match: { task.action: "indices:admin/open" }
   - match: { task.description: "open indices [test_index]" }
+
+  # .tasks index is created when the open index operation completes, so we should delete .tasks index finally,
+  # if not, the .tasks index may introduce unexpected warnings and then cause other test cases to fail.
+  # Delete the .tasks index directly will also introduce warning, but currently we don't have such APIs which can delete one
+  # specified task or clear all completed tasks, so we have to do so. Expect we can introduce more tasks related APIs in future
+  - do:
+      allowed_warnings:
+        - "this request accesses system indices: [.tasks], but in a future major version, direct access to system indices will be prevented by default"
+      indices.delete:
+        index: .tasks
+        ignore_unavailable: true
