--- a/gradle/formatting.gradle
+++ b/gradle/formatting.gradle
@@ -83,7 +83,7 @@ allprojects {
           }
         }
         format 'misc', {
-            target '*.md', '*.gradle', '**/*.json', '**/*.yaml', '**/*.yml', '**/*.svg'   
+            target '*.md', '*.gradle', '**/*.yaml', '**/*.yml', '**/*.svg'   
 
             trimTrailingWhitespace()
             endWithNewline()
