--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -39,6 +39,10 @@ hamcrest          = 2.1
 mockito           = 4.3.1
 objenesis         = 3.2
 bytebuddy         = 1.12.7
+opentelemetry-api = 1.23.1
+opentelemetry-sdk = 1.23.1
+opentelemetry-exporter-otlp = 1.23.1
+opentelemetry-semconv = 1.23.1-alpha
 
 # benchmark dependencies
 jmh               = 1.19
