Update to Apache Lucene 9.6.0-snapshot-8a81515
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -1,5 +1,5 @@
 opensearch        = 3.0.0
-lucene            = 9.5.0
+lucene            = 9.6.0-snapshot-a3ae27f
 
 bundled_jdk_vendor = adoptium
 bundled_jdk = 19.0.2+7
