Update to Gradle 8.1
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -61,7 +61,7 @@ Properties props = VersionPropertiesLoader.loadBuildSrcVersion(project.file('ver
 version = props.getProperty("opensearch")
 
 def generateVersionProperties = tasks.register("generateVersionProperties", WriteProperties) {
-  outputFile = "${buildDir}/version.properties"
+  destinationFile = file("${buildDir}/version.properties")
   comment = 'Generated version properties'
   properties(props)
 }
