Skip IT tests before 2.7.0
Signed-off-by: Mingshi Liu <mingshl@amazon.com>

--- a/rest-api-spec/src/main/resources/rest-api-spec/test/index/90_flat_object.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/index/90_flat_object.yml
@@ -22,6 +22,9 @@ teardown:
 # Upload a sample document to index
 ---
 "Flat object test":
+  - skip:
+      version: " 2.7.0 - "
+      reason: "flat-object is introduced in 2.7.0"
   - do:
       index:
         index: test
