s3 async io changes in core

--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -22,13 +22,14 @@ woodstox          = 6.4.0
 kotlin            = 1.7.10
 antlr4            = 4.11.1
 guava             = 31.1-jre
- 
+
 # when updating the JNA version, also update the version in buildSrc/build.gradle
 jna               = 5.5.0
 
 netty             = 4.1.87.Final
+nettytcnative     = 2.0.54.Final
 joda              = 2.12.2
-    
+
 # client dependencies
 httpclient5       = 5.1.4
 httpcore5         = 5.1.5
@@ -40,6 +41,7 @@ commonscodec      = 1.15
 
 # plugin dependencies
 aws               = 1.12.270
+aws_v2            = 2.20.26
 
 # when updating this version, you need to ensure compatibility with:
 #  - plugins/ingest-attachment (transitive dependency, check the upstream POM)
