--- a/plugins/repository-s3/config/repository-s3/log4j2.properties
+++ b/plugins/repository-s3/config/repository-s3/log4j2.properties
@@ -10,7 +10,7 @@
 #
 
 logger.com_amazonaws.name = com.amazonaws
-logger.com_amazonaws.level = debug
+logger.com_amazonaws.level = warn
 
 logger.com_amazonaws_jmx_SdkMBeanRegistrySupport.name = com.amazonaws.jmx.SdkMBeanRegistrySupport
 logger.com_amazonaws_jmx_SdkMBeanRegistrySupport.level = error
