Removed license head and add tests for wildcard query
Signed-off-by: Mingshi Liu <mingshl@amazon.com>

--- a/rest-api-spec/src/main/resources/rest-api-spec/test/index/90_flat_object.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/index/90_flat_object.yml
@@ -409,3 +409,30 @@ teardown:
 
   - length: { hits.hits: 1 }
   - match: { hits.hits.0._source.catalog.author.surname: "Doe" }
+
+
+  # Wildcard Query with dot path.
+  - do:
+      catch: bad_request
+      search:
+        body: {
+          _source: true,
+          query: {
+            "wildcard": {
+              "catalog.title": "Mock*"
+            }
+          }
+        }
+
+  # Wildcard Query without dot path.
+  - do:
+      catch: bad_request
+      search:
+        body: {
+          _source: true,
+          query: {
+            "wildcard": {
+              "catalog": "Mock*"
+            }
+          }
+        }
