--- a/rest-api-spec/src/main/resources/rest-api-spec/test/index/90_flat_object.yml
+++ b/rest-api-spec/src/main/resources/rest-api-spec/test/index/90_flat_object.yml
@@ -40,8 +40,13 @@ teardown:
                 "surname": "McCandless",
                 "given": "Mike"
               },
-            "catalogId":"c-0002"
-          },
+            "catalogId":"c-0002",
+            "quantity": 1234,
+            "rating": 9.2,
+            "location": [-81.7982,41.3847 ],
+            "review": [["great",99.8],["ok",80.0]],
+            "publishDate": "2015-01-01"
+            },
           "required_matches": 1
         }
   - do:
@@ -57,7 +62,12 @@ teardown:
                 "surname": "Doe",
                 "given": "John"
               },
-            "catalogId": "c-0050"
+            "catalogId": "c-0050",
+            "quantity": 4321,
+            "rating": 5.2,
+            "location": [-12.7982,33.3847 ],
+            "review": [["bad",30.41],["ok",80.0]],
+            "publishDate": "2016-01-01"
           },
           "required_matches": 1
         }
@@ -150,20 +160,33 @@ teardown:
   - length: { hits.hits: 1 }
   - match: { hits.hits.0._source.catalog.author.given: "Mike" }
 
-  # Term Query1 with dot path
+  # Term Query1 with dot path for date
   - do:
       search:
         body: {
           _source: true,
           query: {
-            term: { catalog.title: "Lucene in Action"}
+            term: { catalog.publishDate: "2015-01-01"}
           }
         }
 
   - length:   { hits.hits: 1  }
-  - match: { hits.hits.0._source.catalog.title: "Lucene in Action" }
+  - match: { hits.hits.0._source.catalog.publishDate: "2015-01-01" }
 
-  # Term Query2 with dot path.
+  # Term Query1 without dot path for date
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            term: { catalog: "2015-01-01" }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.publishDate: "2015-01-01" }
+
+  # Term Query2 with dot path for string
   - do:
       search:
         body: {
@@ -176,7 +199,7 @@ teardown:
   - length: { hits.hits: 1 }
   - match: { hits.hits.0._source.catalog.author.given: "Mike" }
 
-  # Term Query without dot path.
+  # Term Query2 without dot path.
   - do:
       search:
         body: {
@@ -188,6 +211,59 @@ teardown:
 
   - length: { hits.hits: 1 }
   - match: { hits.hits.0._source.catalog.author.given: "Mike" }
+
+  # Term Query3 with dot path for array
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            term: { catalog.location: "-12.7982" }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.location:  [-12.7982,33.3847 ]}
+
+  # Term Query3 without dot path for array
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            term: { catalog: "-12.7982" }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.location:  [-12.7982,33.3847 ]}
+
+
+  # Term Query4 with  dot path for nested-array
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            term: { catalog.review: "99.8" }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.review: [ [ "great",99.8 ],[ "ok",80.0 ] ] }
+
+  # Term Query4 without dot path for nested-array
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            term: { catalog: "99.8" }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.review:  [["great",99.8],["ok",80.0]] }
 
   # Terms Query without dot path.
   - do:
@@ -317,6 +393,114 @@ teardown:
   - length: { hits.hits: 1 }
   - match: { hits.hits.0._source.catalog.catalogId: "c-0002" }
 
+  # Range Query with integer input with dot path.
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            "range": {
+              "catalog.quantity": {
+                "gte": 1000,
+                "lte": 2000
+              }
+            }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.quantity: 1234 }
+
+  # Range Query with integer input without dot path.
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            "range": {
+              "catalog": {
+                "gte": 1000,
+                "lte": 2000
+              }
+            }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.quantity: 1234 }
+
+  # Range Query with date input with dot path.
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            "range": {
+              "catalog.publishDate": {
+                "gte": "2015-01-01",
+                "lte": "2015-12-31"
+              }
+            }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.publishDate: "2015-01-01" }
+
+  # Range Query with date input without dot path.
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            "range": {
+              "catalog": {
+                "gte": "2015-01-01",
+                "lte": "2015-12-31"
+              }
+            }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.publishDate: "2015-01-01" }
+
+  # Range Query with double input with dot path.
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            "range": {
+              "catalog.location": {
+                "gte": 40.1234,
+                "lte": 42.1234
+              }
+            }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.location: [-81.7982,41.3847] }
+
+  # Range Query with double input without dot path.
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            "range": {
+              "catalog": {
+                "gte": 40.1234,
+                "lte": 42.1234
+              }
+            }
+          }
+        }
+
+  - length: { hits.hits: 1 }
+  - match: { hits.hits.0._source.catalog.location: [ -81.7982,41.3847 ] }
+
   # Exists Query with dot path.
   - do:
       search:
@@ -423,6 +607,10 @@ teardown:
             }
           }
         }
+  - match: { error.root_cause.0.type: "query_shard_exception" }
+  - match: { error.root_cause.0.reason: "Can only use wildcard queries on keyword and text fields - not on [catalog.title] which is of type [flat_object]"}
+  - match: { status: 400 }
+
 
   # Wildcard Query without dot path.
   - do:
@@ -436,3 +624,93 @@ teardown:
             }
           }
         }
+  - match: { error.root_cause.0.type: "query_shard_exception" }
+  - match: { error.root_cause.0.reason: "Can only use wildcard queries on keyword and text fields - not on [catalog] which is of type [flat_object]" }
+  - match: { status: 400 }
+
+  # Aggregation and Match Query with dot path.
+  - do:
+      catch: bad_request
+      search:
+        body: {
+          _source: true,
+          size: 0,
+          query: {
+            "match": {
+              "ISBN13": "V9781933988177"
+            }
+          },
+          aggs: {
+            "avg_rating": {
+              "avg": {
+                "field": "catalog.rating"
+              }
+            }
+          }
+        }
+  - match: { error.root_cause.0.type: "illegal_argument_exception" }
+  - match: { error.root_cause.0.reason: "Field [catalog.rating] of type [flat_object] is not supported for aggregation [avg]" }
+  - match: { status: 400 }
+
+  # Aggregation using average and Match Query with dot path.
+  - do:
+      catch: bad_request
+      search:
+        body: {
+          _source: true,
+          size: 0,
+          query: {
+            "match": {
+              "ISBN13": "V9781933988177"
+            }
+          },
+          aggs: {
+            "avg_rating": {
+              "avg": {
+                "field": "catalog.rating"
+              }
+            }
+          }
+        }
+  - match: { error.root_cause.0.type: "illegal_argument_exception" }
+  - match: { error.root_cause.0.reason: "Field [catalog.rating] of type [flat_object] is not supported for aggregation [avg]" }
+  - match: { status: 400 }
+
+
+  # Aggregation using geolocation and Match Query with dot path.
+  - do:
+      catch: bad_request
+      search:
+        body: {
+          _source: true,
+          size: 0,
+          query: {
+            "match": {
+              "ISBN13": "V9781933988177"
+            }
+          },
+          aggs: {
+            "books_in_location": {
+              "geo_distance": {
+                "field": "catalog.location",
+                "origin": "41.3847,-81.7982",
+                "unit": "km",
+                "ranges": [
+                  {
+                    "to": 100
+                  }
+                ]
+              },
+              "aggs": {
+                "total_books": {
+                  "sum": {
+                    "field": "catalog.quantity"
+                  }
+                }
+              }
+            }
+          }
+        }
+  - match: { error.root_cause.0.type: "illegal_argument_exception" }
+  - match: { error.root_cause.0.reason: "Field [catalog.location] of type [flat_object] is not supported for aggregation [geo_distance]" }
+  - match: { status: 400 }
